# PulseGuard

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: release.yml
docs/: 01.mvp.md
scripts/: bump-version.sh
scripts/version/: 0.1.0.md  0.2.0.md  0.2.1.md  0.2.2.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  error.rs  main.rs  models.rs  monitor.rs  storage.rs
src/lib/: api.ts
