[package]
name = "pulseguard"
version = "0.2.2"
description = "Per-process system monitor for Linux with a Tauri dashboard"
authors = ["toyofumi"]
license = "MIT"
edition = "2021"
rust-version = "1.82"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38"
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2"

